--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
    </head>
    <body>
       <div class="file-form"></div>
+      <div class="lightbox"></div>
+      <div class="carousel"></div>
       <div class="images-list-placeholder"></div>
 <!--       <ul class='images-list'></ul>
  -->
+      <script src="fetch.js"></script>
+      <script src="models/Carousel.js"></script>
+      <script src="models/LightBox.js"></script>
       <script src="models/FileForm.js"></script>
       <script src="models/ImagesList.js"></script>
       <script src="models/image.js"></script>
